--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm install --no-optional && npm run build"
+  command = "npm install @rollup/rollup-linux-x64-gnu && npm install --omit=optional && npm run build"
   publish = "dist"
