--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
   command = "npm install @rollup/rollup-linux-x64-gnu && npm install --omit=optional && npm run build"
   publish = "dist"
+  node_version = "22.8.0"
